# FaceBlur

./: .gitignore  CMakeLists.txt  README.md
FaceBlurDemo/: CMakeLists.txt  FaceBlurDemo.cpp  faceblurdemo.cpp  faceserializer.cpp  faceserializer.hpp
FaceBlurLib/: CMakeLists.txt  faceblur.cpp  faceblur.hpp
FaceProcessingLib/: CMakeLists.txt  faceblur.cpp  faceblur.hpp  facedetector.cpp  facedetector.hpp  libdefines.hpp
FaceProcessingLib/resources/: haarcascade_frontalface_alt2.xml
Tests/: CMakeLists.txt  testfacedetector.cpp
